Updated to Minecraft version 1.19.4
Cleaned up Gradle stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,17 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+mod_packagename=com.heaser.pipeconnector
+mod_id=pipe_connector
+mod_name=Pipe Connector
+mod_vendor=Heaser
+mod_version=1.19.4-0.0.4
+mod_minecraft_version=1.19.4
+mod_loader_version=[45,)
+mod_forge_version=[45.0.1,)
+
+pipez_mod_id=443900
+pipez_mod_file_id=4496957
+
+forge_version=45.0.1
