--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,12 @@ mod_minecraft_version=1.19.4
 mod_loader_version=[45,)
 mod_forge_version=[45.0.1,)
 
+# Pipez mod related stuff
 pipez_mod_id=443900
 pipez_mod_file_id=4496957
+
+# Super Factory Manager
+sfm_mod_id=306935
+sfm_mod_file_id=4508648
 
 forge_version=45.0.1
