--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${mod_minecraft_version}-${forge_version}"
-    runtimeOnly fg.deobf("curse.maven:pipezs-${pipez_mod_id}:${pipez_mod_file_id}")
+    runtimeOnly fg.deobf("curse.maven:pipez-${pipez_mod_id}:${pipez_mod_file_id}")
    // runtimeOnly fg.deobf("curse.maven:super-factory-manager-${sfm_mod_id}:${sfm_mod_file_id}")
 }
 
