--- a/gradle.properties
+++ b/gradle.properties
@@ -7,17 +7,26 @@ mod_packagename=com.heaser.pipeconnector
 mod_id=pipe_connector
 mod_name=Pipe Connector
 mod_vendor=Heaser
-mod_version=1.19.2-0.0.7
+mod_version=1.19.2-0.0.8
 mod_minecraft_version=1.19.2
 mod_loader_version=[43,)
 mod_forge_version=[43.0.0,)
 
-# Pipez mod related stuff
+# Pipez
 pipez_mod_id=443900
 pipez_mod_file_id=4496931
 
 # Super Factory Manager
 sfm_mod_id=306935
 sfm_mod_file_id=4508648
+
+# Refined Storage
+refinedstorage_mod_id=243076
+refinedstorage_mod_file_id=4465872
+
+# Mekanism
+mekanism_mod_id=268560
+mekanism_mod_file_id=4385637
+
 
 forge_version=43.2.0
