--- a/build.gradle
+++ b/build.gradle
@@ -83,10 +83,15 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${mod_minecraft_version}-${forge_version}"
+
     runtimeOnly fg.deobf("curse.maven:pipez-${pipez_mod_id}:${pipez_mod_file_id}")
     runtimeOnly fg.deobf("curse.maven:refined-storage-${refinedstorage_mod_id}:${refinedstorage_mod_file_id}")
     runtimeOnly fg.deobf("curse.maven:mekanism-${mekanism_mod_id}:${mekanism_mod_file_id}")
-   // runtimeOnly fg.deobf("curse.maven:super-factory-manager-${sfm_mod_id}:${sfm_mod_file_id}")
+//    runtimeOnly fg.deobf("curse.maven:applied-energistics2-223794:4498125")
+    implementation fg.deobf("curse.maven:thermal-dynamics-227443:4391160")
+    implementation fg.deobf("curse.maven:thermal-foundation-222880:4382373")
+    implementation fg.deobf("curse.maven:cofh-core-69162:4385216")
+    implementation fg.deobf("curse.maven:construction-wand-399558:4455719")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
