--- a/build.gradle
+++ b/build.gradle
@@ -88,10 +88,12 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:refined-storage-${refinedstorage_mod_id}:${refinedstorage_mod_file_id}")
     runtimeOnly fg.deobf("curse.maven:mekanism-${mekanism_mod_id}:${mekanism_mod_file_id}")
 //    runtimeOnly fg.deobf("curse.maven:applied-energistics2-223794:4498125")
-    implementation fg.deobf("curse.maven:thermal-dynamics-227443:4391160")
-    implementation fg.deobf("curse.maven:thermal-foundation-222880:4382373")
-    implementation fg.deobf("curse.maven:cofh-core-69162:4385216")
-    implementation fg.deobf("curse.maven:construction-wand-399558:4455719")
+    runtimeOnly fg.deobf("curse.maven:thermal-dynamics-227443:4391160")
+    runtimeOnly fg.deobf("curse.maven:thermal-foundation-222880:4382373")
+    runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4385216")
+    runtimeOnly fg.deobf("curse.maven:construction-wand-399558:4455719")
+    runtimeOnly fg.deobf("curse.maven:pretty-pipes-376737:4049655")
+    runtimeOnly fg.deobf("curse.maven:jei-238222:4494410")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
