--- a/build.gradle
+++ b/build.gradle
@@ -90,13 +90,15 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:refined-storage-${refinedstorage_mod_id}:${refinedstorage_mod_file_id}")
     runtimeOnly fg.deobf("curse.maven:mekanism-${mekanism_mod_id}:${mekanism_mod_file_id}")
 //    runtimeOnly fg.deobf("curse.maven:applied-energistics2-223794:4498125")
-//    runtimeOnly fg.deobf("curse.maven:thermal-dynamics-227443:4391160")
-//    runtimeOnly fg.deobf("curse.maven:thermal-foundation-222880:4760629")
-//    runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4759876")
+
+    runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4801049")
+    runtimeOnly fg.deobf("curse.maven:thermal-dynamics-227443:4760633")
+    runtimeOnly fg.deobf("curse.maven:thermal-foundation-222880:4782926")
+
     runtimeOnly fg.deobf("curse.maven:construction-wand-399558:4455719")
     runtimeOnly fg.deobf("curse.maven:pretty-pipes-376737:4049655")
     runtimeOnly fg.deobf("curse.maven:jei-238222:4494410")
-//    runtimeOnly fg.deobf("curse.maven:mcjtylib-233105:4501791")
+    runtimeOnly fg.deobf("curse.maven:mcjtylib-233105:4501791")
 
 }
 
