--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,11 @@ mod_packagename=com.heaser.pipeconnector
 mod_id=pipe_connector
 mod_name=Pipe Connector
 mod_vendor=Heaser
-mod_version=1.19.2-0.1.04
-mod_minecraft_version=1.19.2
-mod_loader_version=[43,)
-mod_forge_version=[43.0.0,)
+mod_version=1.20.1-0.1.04
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1,1.21)
+forge_version_range=[47,)
+loader_version_range=[47,)
 
 # Pipez
 pipez_mod_id=443900
@@ -29,4 +30,4 @@ mekanism_mod_id=268560
 mekanism_mod_file_id=4385637
 
 
-forge_version=43.2.0
+forge_version=47.2.0
