--- a/build.gradle
+++ b/build.gradle
@@ -93,9 +93,9 @@ dependencies {
 
     // runtimeOnly fg.deobf("curse.maven:applied-energistics2-223794:4857895")
 
-    // runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4801049")
-    // runtimeOnly fg.deobf("curse.maven:thermal-dynamics-227443:4760633")
-    // runtimeOnly fg.deobf("curse.maven:thermal-foundation-222880:4782926")
+    runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4970669")
+    runtimeOnly fg.deobf("curse.maven:thermal-dynamics-227443:4970699")
+    runtimeOnly fg.deobf("curse.maven:thermal-foundation-222880:4979840")
     runtimeOnly fg.deobf("curse.maven:pretty-pipes-376737:4769646")
     runtimeOnly fg.deobf("curse.maven:jei-238222:4712868")
     runtimeOnly fg.deobf("curse.maven:mcjtylib-233105:4747680")
