--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ mod_packagename=com.heaser.pipeconnector
 mod_id=pipe_connector
 mod_name=Pipe Connector
 mod_vendor=Heaser
-mod_version=1.20.1-0.2.1
+mod_version=1.20.1-0.2.2
 minecraft_version=1.20.1
 minecraft_version_range=[1.20.1,1.21)
 forge_version_range=[47,)
@@ -18,7 +18,7 @@ pipez_mod_id=443900
 pipez_mod_file_id=4496931
 
 # Super Factory Manager
-sfm_mod_id=306935
+sfm_mod_id=306935?
 sfm_mod_file_id=4508648
 
 # Refined Storage
