--- a/build.gradle
+++ b/build.gradle
@@ -92,7 +92,8 @@ dependencies {
     runtimeOnly fg.deobf("curse.maven:mekanism-${mekanism_mod_id}:4866575")
 
     // runtimeOnly fg.deobf("curse.maven:applied-energistics2-223794:4857895")
-
+    runtimeOnly fg.deobf("curse.maven:storage-drawers-223852:4668552")
+    runtimeOnly fg.deobf("curse.maven:framed-compacting-drawers-376351:4777556")
     runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4970669")
     runtimeOnly fg.deobf("curse.maven:thermal-dynamics-227443:4970699")
     runtimeOnly fg.deobf("curse.maven:thermal-foundation-222880:4979840")
