--- a/gradle.properties
+++ b/gradle.properties
@@ -1,33 +1,32 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
-
-mod_packagename=com.heaser.pipeconnector
+#Mod
 mod_id=pipe_connector
 mod_name=Pipe Connector
+project_pkg=com.heaser.pipeconnector
 mod_vendor=Heaser
-mod_version=1.20.1-0.2.3
+
+# Shared
 minecraft_version=1.20.1
+mod_version=0.2.3
 minecraft_version_range=[1.20.1,1.21)
 forge_version_range=[47,)
 loader_version_range=[47,)
 
-# Pipez
+# Forge
+forge_version=47.2.0
+
+# Gradle
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
+# Dev Dependencies
 pipez_mod_id=443900
 pipez_mod_file_id=4496931
 
-# Super Factory Manager
 sfm_mod_id=306935?
 sfm_mod_file_id=4508648
 
-# Refined Storage
 refinedstorage_mod_id=243076
 refinedstorage_mod_file_id=4465872
 
-# Mekanism
 mekanism_mod_id=268560
 mekanism_mod_file_id=4385637
-
-
-forge_version=47.2.0
