Added AE2 Pipe Placement support

--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ plugins {
 apply plugin: 'idea'
 
 version = mod_version
-group = "{minecraft_version}-{mod_id}"
-archivesBaseName = "${mod_id}-${minecraft_version}-${mod_version}"
+group = project_pkg
+archivesBaseName = "${mod_id}-${minecraft_version}"
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
@@ -56,9 +56,9 @@ dependencies {
 
     // Loves mixins
     modImplementation ("curse.maven:applied-energistics2-223794:4857895")
-
-    modImplementation ("curse.maven:storage-drawers-223852:4668552")
-    modImplementation ("curse.maven:framed-compacting-drawers-376351:4777556")
+    //
+    modImplementation("curse.maven:storage-drawers-223852:4668552")
+    modImplementation("curse.maven:framed-compacting-drawers-376351:4777556")
 
 //    modImplementation ("curse.maven:cofh-core-69162:4970669")
 //    modImplementation ("curse.maven:thermal-dynamics-227443:4970699")
